...


  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        key: ValueKey('homePageAppBar'), // Add a unique Key here
        title: Text(
          _selectedIndex == 0
              ? 'Friends'
              : _selectedIndex == 1
              ? 'Event List'
              : 'Gift List',
        ),
        backgroundColor: Color(0xFFdf43a1),
        automaticallyImplyLeading: false,
        actions: [
          IconButton(
...
